--- a/michal-dudzik-pab/Scrabble/index.html
+++ b/michal-dudzik-pab/Scrabble/index.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scrabble</title>
-    <link rel="stylesheet" href="css/bootstrap-5.1.3-dist/css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-    <div id="scoreBoard">
-         
-    </div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Scrabble</title>
+		<link rel="stylesheet" href="css/bootstrap-5.1.3-dist/css/bootstrap.css" />
+		<link rel="stylesheet" href="css/main.css" />
+		<link rel="shortcut icon" href="media/favicon.png" />
+		<script src="backend/jquery-3.6.js"></script>
+		<script src="backend/main.js"></script>
+	</head>
+	<body>
+		<div id="scoreBoard"></div>
 
-    <div id="board">
-        
+		<div id="js-board"></div>
 
-    </div>
+		<div id="chat"></div>
 
-    <div id="chat">
-
-    </div>
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <p>&copy; Projekt wykonany na zaliczenie by Michał Dudzik & Wojtek Rusiecki </p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-</body>
+		<footer>
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-md-auto align-self-end">
+						<p>
+							&copy; Projekt wykonany na zaliczenie by Michał Dudzik & Wojtek
+							Rusiecki
+						</p>
+					</div>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
